--- a/composer.json
+++ b/composer.json
@@ -1,38 +1,43 @@
 {
-	"name": "lfischer/open-weather-map-api",
-	"type": "library",
-	"description": "A simple PHP library for querying the Open Weather Map API.",
-	"keywords": ["API", "weather"],
-	"homepage": "https://github.com/leonardfischer/open-weather-map-api",
-	"license": "MIT",
-	"authors": [{
-		"name": "Leonard Fischer",
-		"email": "post@leonard.fischer.de",
-		"homepage": "http://leonardfischer.de",
-		"role": "Developer"
-	}],
-	"suggest": {
-		"ext-curl": "*",
-		"ext-libxml": "*",
-		"ext-simplexml": "*",
-		"guzzlehttp/guzzle": "^5|^6|^7"
-	},
-    "support": {
-        "issues": "https://github.com/leonardfischer/open-weather-map-api/issues",
-        "source": "https://github.com/leonardfischer/open-weather-map-api"
-    },
-	"require": {
-		"php": ">=7.2.0",
-		"ext-json": "*"
-	},
-	"autoload": {
-		"psr-4": {
-			"lfischer\\openWeatherMap\\": "src/"
-		}
-	},
-	"require-dev": {
-		"psalm/phar": "^4.3",
-		"phpunit/phpunit": "^9",
-		"friendsofphp/php-cs-fixer": "^2.18"
-	}
+  "name": "lfischer/open-weather-map-api",
+  "type": "library",
+  "description": "A simple PHP library for querying the Open Weather Map API.",
+  "keywords": [
+    "API",
+    "weather"
+  ],
+  "homepage": "https://github.com/leonardfischer/open-weather-map-api",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Leonard Fischer",
+      "email": "post@leonard.fischer.de",
+      "homepage": "http://leonardfischer.de",
+      "role": "Developer"
+    }
+  ],
+  "suggest": {
+    "guzzlehttp/guzzle": "^5|^6|^7"
+  },
+  "support": {
+    "issues": "https://github.com/leonardfischer/open-weather-map-api/issues",
+    "source": "https://github.com/leonardfischer/open-weather-map-api"
+  },
+  "require": {
+    "php": ">=7.2.0",
+    "ext-curl": "*",
+    "ext-json": "*",
+    "ext-libxml": "*",
+    "ext-simplexml": "*"
+  },
+  "autoload": {
+    "psr-4": {
+      "lfischer\\openWeatherMap\\": "src/"
+    }
+  },
+  "require-dev": {
+    "psalm/phar": "^4.6",
+    "phpunit/phpunit": "^9.5",
+    "friendsofphp/php-cs-fixer": "^2.18"
+  }
 }
