Updating configuration of php-cs and grumphp, also adding autoloader configuration for tests

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
   },
   "autoload": {
     "psr-4": {
-      "lfischer\\openWeatherMap\\": "src/"
+      "lfischer\\openWeatherMap\\": "src/",
+      "lfischer\\openWeatherMap\\Tests\\": "tests/"
     }
   },
   "require-dev": {
